--- a/tours/css/style.css
+++ b/tours/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('../img/Background.png');
+  background-image: url('../img/Tours_1024.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0;
