--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('../images/Background.png');
+  background-image: url('../images/Tours_1024.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0;
